Git Tests/force-app/main/default/default/objects/ItemCampanha__c/ItemCampanha__c.object-meta.xml
<CustomObject>
    <label>Item da campanha</label>
    <nameField>
        <label>Código do item de campanha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da campanha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>