Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>ItemCampanha</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>