Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/IdVinculo__c.field-meta.xml
<CustomField>
    <fullName>IdVinculo__c</fullName>
    <description>Campo criado para ser a chave* utilizada na regra de duplicata, para evitar que um item ativo** de campanha seja cadastrado em mais de uma campanha ao mesmo tempo.

*Campo preenchido via Fluxo.

**Item de campanha é considerado ativo quando Data de vigência final &gt; data de hoje.</description>
    <label>Id vínculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>