Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/ItemAtivo__c.field-meta.xml
<CustomField>
    <fullName>ItemAtivo__c</fullName>
    <formula>IF(VigenciaFinal__c &gt; TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item ativo?</label>
    <type>Checkbox</type>
</CustomField>