Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>