Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/MetaVolume__c.field-meta.xml
<CustomField>
    <fullName>MetaVolume__c</fullName>
    <label>Meta (Volume)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>