Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/NomeEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NomeEmpresa__c</fullName>
    <label>Nome do CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>