Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/PrecoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PrecoMinimo__c</fullName>
    <label>Preço mínimo</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>