Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/PrecoUnitario__c.field-meta.xml
<CustomField>
    <fullName>PrecoUnitario__c</fullName>
    <label>Preço unitário</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>