Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/PrincipioAtivo__c.field-meta.xml
<CustomField>
    <fullName>PrincipioAtivo__c</fullName>
    <formula>NomeProduto__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Princípio ativo do produto</label>
    <type>Text</type>
</CustomField>