Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/TipoGatilho__c.field-meta.xml
<CustomField>
    <fullName>TipoGatilho__c</fullName>
    <label>Tipo de gatilho</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLD</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>