Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/TipoMeta__c.field-meta.xml
<CustomField>
    <fullName>TipoMeta__c</fullName>
    <description>Campo para descrever se a meta deste produto na campanha é em valor (R$) ou volume.</description>
    <inlineHelpText>Tipo da meta deste produto na campanha: Valor ou Volume.</inlineHelpText>
    <label>Tipo da meta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valor (R$)</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>