Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/TipoRegistroCampanha__c.field-meta.xml
<CustomField>
    <fullName>TipoRegistroCampanha__c</fullName>
    <formula>Campanha__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro da campanha</label>
    <type>Text</type>
</CustomField>