Git Tests/force-app/main/default/default/objects/ItemCampanha__c/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <label>Validade</label>
    <type>Date</type>
</CustomField>