Git Tests/force-app/main/default/default/objects/ItemCampanha__c/recordTypes/ItemCampanha.recordType-meta.xml
<RecordType>
    <fullName>ItemCampanha</fullName>
    <active>true</active>
    <label>Item de campanha</label>
</RecordType>