Git Tests/force-app/main/default/default/objects/ItemCampanha__c/recordTypes/ItemCampanhaVendedor.recordType-meta.xml
<RecordType>
    <fullName>ItemCampanhaVendedor</fullName>
    <active>true</active>
    <label>Item de campanha de vendedor</label>
</RecordType>