Git Tests/force-app/main/default/default/objects/ItemCampanha__c/recordTypes/ItemContratoShelfLife.recordType-meta.xml
<RecordType>
    <fullName>ItemContratoShelfLife</fullName>
    <active>true</active>
    <label>Item de campanha de shelf life</label>
</RecordType>